<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HFU Mensa</string>
    <string name="weekday_so">Sontag</string>
    <string name="menu_about">Über die App</string>
    <string name="menu_info">Info über Mensa</string>
    <string name="menu_today">Heute</string>
    <string name="menu_sync">Aktualisieren</string>
    <string name="menu_settings">Settings</string>
    <string name="text_header_menu_one">Menü 1</string>
    <string name="text_address">Adresse</string>
    <string name="text_opening_hours">Öffnungszeiten</string>
    <string name="text_general_info">Sonstige Informationen</string>
    <string name="text_header_menu_two">Menü 2</string>
    <string name="text_menu_no_offer">Kein Angebot</string>
    <string name="text_about">\u00A9 <b>Christian Würthner</b> 2014\nAllgemeine Informatik\nHochschule Furtwangen\n\nBasierend auf Mensa Furtwangen:\nhttps://play.google.com/store/apps/details?id=de.rentoudu.mensa\n\nSourcecode auf Github:\nhttps://github.com/crysxd/mensa-furtwangen\n\nDaten von SWFR.\nVersion: %1$s</string>
    <string name="text_diet_synced">Speiseplan wurde aktualisiert.</string>
    <string name="text_diet_fetch">Aktualisiere Speiseplan&#8230;</string>
    <string name="text_closed">Geschlossen</string>
    <string name="text_empty">-</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Abbrechen</string>
    <string name="rating_insert_failed">Konnte die Bewertung nicht speichern, sry.</string>
    <string name="rating_value_default">0</string>
    <string name="rating_description_good">Mag ich</string>
    <string name="rating_description_bad">Mag ich nicht</string>
    <string name="notification_updating_menu_title">Aktualisiere Menü</string>
    <string name="notification_updating_menu_text">Das Menü wird aktualisiert&#8230;</string>
    <string name="error_diet_fetch">Aktuell können keine Daten geladen werden.</string>
    <string name="drawer_open">Mensa wählen</string>

    <color name="color_dark_text">#000</color>
    <color name="color_light_text">#aaa</color>
    <color name="color_main_style">#83B81A</color>
    <color name="color_main_style_transparent">#bb83B81A</color>
    <color name="color_activity_background">#e5e5e5</color>
    <color name="color_main_style_dark">#ff668f15</color>
    <color name="color_acent">#367248</color>
    <color name="color_dark_red">#aa1610</color>

</resources>