<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="de.rentoudu.mensa">

    <item
        android:id="@+id/menu_today"
        android:icon="@drawable/ic_action_go_to_today"
        app:showAsAction="always"
        android:title="@string/menu_today"/>
     <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="never"
        android:title="@string/menu_info"/>
    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="never"
        android:title="@string/menu_sync"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>